PR/43597: Don't break from parsing word tokens in we are in double quotes. Fixes: sh -c 'echo "${foo:="first-word"} second-word"'